# zaplab

./: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Cargo.toml  Dockerfile  index.html  maze_example.html
frontend/src/: lib.rs  slider.rs
infra/cloudflared/: Dockerfile  config.yml.template
infra/nginx/: nginx.conf  nginx.dev.conf
