[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
gloo-net = "0.7"
serde_json = "1"
wasm-bindgen = "0.2"
rand = { version = "0.10.1", features = ["std_rng"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
